fixed navbar and alignment of posts

--- a/index.css
+++ b/index.css
@@ -3,21 +3,26 @@ body {
     padding: 0;
 }
 
-.top-bar-div a {
+.navbar a {
     text-decoration: none;
     color: black;
 }
 
-.top-bar-div a:hover {
+.navbar a:hover {
     text-decoration: underline;
 }
 
-a,
+.navbar a,
 p {
     display: inline;
 }
 
-.top-bar-div {
+nav {
+    display: flex;
+    align-items: center;
+}
+
+.navbar {
     border-bottom-style: solid;
     border-width: 1px;
     padding-top: 2px;
@@ -27,14 +32,23 @@ p {
     color: black;
     background-color: rgb(240, 240, 240);
     width: 100%;
-    text-overflow: clip;
+    gap: 0.15rem;
+    align-items: center;
+    overflow-x: hidden;
+    white-space: nowrap;
+}
+
+#popular {
+    color: rgb(255, 69, 0);
+    font-weight: bold;
+
 }
 
 .seperator-top-bar {
     color: rgb(80, 80, 80);
 }
 
-.my-subreddits {
+#my-subreddits {
     margin-left: 3px;
     margin-right: 5px;
 }
@@ -43,14 +57,20 @@ p {
     text-decoration: none;
 }
 
-.top-bar-div .popular {
-    color: rgb(255, 69, 0);
-    font-weight: bold;
-}
-
-.more {
+#more {
     font-weight: bold;
     float: right;
+    border-bottom-style: solid;
+    border-width: 1px;
+    /* padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 3px; */
+    padding: 2px;
+    font-size: 6px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+    background-color: rgb(240, 240, 240);
+    white-space: nowrap;
 }
 
 .reddit-logo-div {
@@ -122,7 +142,7 @@ p {
     cursor: pointer;
 }
 
-.popular-div {
+#popular-search {
     margin-top: 4px;
     margin-left: 5px;
     margin-right: 5px;
@@ -131,17 +151,22 @@ p {
     border-width: 1px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 8px;
+    display: block;
 }
 
-.popular-in {
-    display: inline;
-    margin-left: 7px;
-}
-
-.country-dropdown {
+#popular-search span {
     color: rgb(128, 128, 128);
     font-weight: bold;
 }
+
+#post-container {
+    display: flex;
+    flex-direction: column;
+    float: right;
+    gap: 8px;
+}
+
+
 
 .post-div {
     display: flex;
@@ -153,6 +178,8 @@ p {
     font-size: 12px;
     color: gray;
     font-family: Arial;
+    text-align: center;
+    min-width: 0.8rem;
 }
 
 .rating-buttons-div {
@@ -161,6 +188,7 @@ p {
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
+    min-width: 0.8rem;
 }
 
 .rate-up:hover,
